cert/myapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: default
spec:
  #tls:
  #- secretName: myapp-tls-staging
  #  hosts:
  #  - myapp.ibaset.com
  rules:
    - host: myapp.ibaset.com
      http:
        paths:
          - backend:
              serviceName: myapp
              servicePort: 3000
            path: /
